--- a/packatrack/src/index.css
+++ b/packatrack/src/index.css
@@ -18,8 +18,8 @@ code {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #ffffff;
-  color: #2c3e50;
+  background-color: #101d27;
+  color: #d7d7c3;
   font-family: 'Helvetica Neue', Arial, sans-serif;
   padding: 20px;
 }
@@ -27,6 +27,7 @@ code {
 .home-logo {
   width: 120px;
   margin-bottom: 20px;
+  border-radius: 16px;
 }
 
 h1 {
@@ -50,8 +51,8 @@ p {
 .home-button {
   padding: 12px;
   font-size: 1rem;
-  background-color: #3498db;
-  color: #ffffff;
+  background-color: #bcc0b2;
+  color: #101d27;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -59,7 +60,7 @@ p {
 }
 
 .home-button:hover {
-  background-color: #2980b9;
+  background-color: #3a7887;
 }
 
 .header-nav {
@@ -67,13 +68,15 @@ p {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #ffffff;
-  border-bottom: 1px solid #e0e0e0;
+  background-color: #101d27;
+  color: #bcc0b2;
+  border-bottom: 1px solid #3a7887;
 }
 
 .menu-toggle {
   display: none;
   background: none;
+  color: #bcc0b2;
   border: none;
   font-size: 2rem;
   cursor: pointer;
@@ -91,8 +94,8 @@ p {
 
 .nav-button {
   display: inline-block;
-  background-color: #3498db;
-  color: #ffffff;
+  background-color: #bcc0b2;
+  color: #101d27;
   padding: 10px 20px;
   border-radius: 5px;
   border: none;
@@ -103,7 +106,7 @@ p {
 }
 
 .nav-button:hover {
-  background-color: #2980b9;
+  background-color: #3a7887;
 }
 
 @media (max-width: 768px) {
@@ -133,9 +136,9 @@ p {
 .footer {
   text-align: center;
   padding: 15px;
-  background-color: #f8f8f8;
-  color: #2c3e50;
+  background-color: #101d27;
+  color: #bcc0b2;
   font-size: 0.9rem;
-  border-top: 1px solid #e0e0e0;
+  border-top: 1px solid #3a7887;
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
