--- a/packatrack/src/index.css
+++ b/packatrack/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -20,7 +20,7 @@ code {
   height: 80vh;
   background-color: #101d27;
   color: #d7d7c3;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .home-logo {
@@ -110,25 +110,25 @@ p {
 
 @media (max-width: 768px) {
   .menu-toggle {
-      display: block;
+    display: block;
   }
   .nav-links {
-      display: none;
-      flex-direction: column;
-      width: 100px;
-      padding: 0;
+    display: none;
+    flex-direction: column;
+    width: 100px;
+    padding: 0;
   }
   .nav-links.open {
-      display: flex;
+    display: flex;
   }
   .nav-links li {
-      width: 100px;
+    width: 100px;
   }
   .nav-button {
-      width: 100px;
-      text-align: center;
-      padding: 10px 0;
-      font-size: 0.9rem;
+    width: 100px;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 0.9rem;
   }
 }
 
@@ -140,5 +140,53 @@ p {
   color: #bcc0b2;
   font-size: 0.9rem;
   border-top: 1px solid #3a7887;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+}
+
+.daily-register {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+  background-color: #101d27;
+  color: #d7d7c3;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+}
+
+.register-form {
+  background-color: #3a7887;
+  border-radius: 8px;
+  padding: 20px;
+  max-width: 320px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.register-form input[type="text"],
+.register-form input[type="number"],
+.register-form input[type="date"] {
+  width: 300px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #2a2d4b;
+  background-color: #101d27;
+  color: #f0e68c;
+}
+
+.form-button {
+  max-width: 320px;
+  padding: 10px;
+  background-color: #3b4c72;
+  border: 1px solid #2a2d4b;
+  color: #f0e68c;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s, color o.3s;
+  margin-top: 10px;
+}
+
+.form-button:hover {
+  background-color: #2a2d4b;
+  color: #eaeaea;
 }
