--- a/packatrack/src/index.css
+++ b/packatrack/src/index.css
@@ -290,7 +290,9 @@ p {
 
   .card {
     padding: 15px;
-    max-width: 100px;
+    max-width: 230px;
+    justify-content: center;
+    align-items: center;
   }
 
   .card p {
